--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "nlw-agent",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
+    "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "db:seed": "node --env-file .env --experimental-strip-types --no-warnings src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "drizzle-orm": "^0.44.2",
@@ -22,7 +24,6 @@
     "@types/node": "^24.0.10",
     "drizzle-kit": "^0.31.4",
     "drizzle-seed": "^0.3.1",
-    "typescript": "^5.8.3",
-    "ultracite": "^5.0.32"
+    "typescript": "^5.8.3"
   }
 }
